--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: linear-gradient(to right, rgb(14, 20, 63), rgb(46, 204, 130));
 }
